# deka

./: Cargo.toml  README.md
examples/bad-order/: README.md  manifests.yaml
examples/cr-and-crd/: README.md  manifests.yaml
examples/many-objects/: README.md  manifests.yaml
src/: backoff.rs  lib.rs
